# jury

./: .envrc  .gitignore  .gitmodules  CONTEXT.md  README.md  flake.nix  pyproject.toml  result  shell.nix
.claude/: settings.local.json
devprefix/share/bash/completions/: _bws  _noble  _ruff  _ty  _uv
hosts/: kerapace.nix  rainbow.nix
hosts/rainbow/: configuration.nix  home.nix
modules/common/: bitwarden.nix  direnv.nix  discord.nix  firefox.nix  ghostty.nix  git.nix  mpv.nix  obsidian.nix  pragmatapro.nix  ssh.nix  vscode.nix  zed.nix  zen.nix  zsh.nix
modules/common/kak/: adrusi.kak  kak-lsp.toml  module.nix
modules/common/kitty/: kitty.conf  macos-launch-services-cmdline  ssh.conf
modules/darwin/: bartender.nix  homebrew.nix  karabiner-elements.nix  macos-settings.nix  touchid.nix
modules/home/: astroid.nix  bitwarden.nix  chromium.nix  claude.nix  direnv.nix  discord.nix  firefox.nix  ghostty.nix  git.nix  karabiner-elements.nix  kitty.nix  macos-settings.nix  mpv.nix  obsidian.nix  pragmatapro.nix  ssh.nix  sway.nix  touchid.nix  vscode.nix  zathura.nix  zed.nix  zen.nix  zsh.nix
modules/home/dmodel/: ec2-manage.sh  module.nix
modules/home/kak/: kak-lsp.toml  kak.kak  latte.kak  module.nix
modules/system/: bitwarden.nix  chromium.nix  ghostty.nix  haskell.nix  karabiner-elements.nix  keyd.nix  linux-builder.nix  macos-settings.nix  mpv.nix  nix-store.nix  pragmatapro.nix  sway.nix  touchid.nix  zen.nix
modules/system-darwin/: homebrew.nix  linux-builder.nix  macos-settings.nix  touchid.nix
noble/: main.py
users/autumn/: home.nix
(+2 files in other folders)
